--- a/roles/test-dev-env/defaults/main.yaml
+++ b/roles/test-dev-env/defaults/main.yaml
@@ -1,5 +1,5 @@
 ---
 image_tag: "build"
 image_name: "opencontrailnightly/developer-sandbox"
-workdir: '{{ zuul.projects | selectattr("short_name", "equalto", "contrail-dev-env") | map(attribute="src_dir") | list | first }}'
+workdir: '{{ zuul.projects | selectattr("short_name", "equalto", "intent-service-dev-env") | map(attribute="src_dir") | list | first }}'
 
